# qualia-codegen-plugin-som

./: .gitlab-ci.yml  README.md  pyproject.toml
docs/: conf.py  index.rst
src/qualia_codegen_plugin_som/: Converter.py
src/qualia_codegen_plugin_som/assets/include/layers/: dsom.hh  normalizeminmax.hh  somlabelling.hh
src/qualia_codegen_plugin_som/assets/layers/: dsom.cc  normalizeminmax.cc  somlabelling.cc
src/qualia_codegen_plugin_som/assets/layers/weights/: dsom.cc  normalizeminmax.cc  somlabelling.cc
src/qualia_codegen_plugin_som/graph/: TorchModelGraph.py
src/qualia_codegen_plugin_som/graph/layers/: TDSOMLayer.py  TNormalizeMinMaxLayer.py  TSOMLabellingLayer.py  __init__.py
